--- a/calculators/minionProduction/style.css
+++ b/calculators/minionProduction/style.css
@@ -1,7 +1,127 @@
+:root {
+  --background: #191919;
+  --container: #242424;
+  --text: #f4f4f4;
+  --button: #29282f;
+  --button-select: #8c9c4c;
+  --tab-button: #ccc;
+  --black: #000000;
+  --green: #008000;
+  --white: #ffffff;
+  --dark-gray: darkgray;
+  --shadow-blue: rgba(0, 123, 255, 0.5);
+  --light-green: #45a049;
+}
+
+:root {
+  --background-dark: #ffffff;
+  --container-dark: #ffffff;
+  --text-dark: #000000;
+  --button-dark: #007bff;
+  --button-select-dark: #8c9c4c;
+  --tab-button-dark: #007bff;
+  --text-dark: #000000;
+}
+
+.theme-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/*.theme-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  position: sticky;
+  z-index: 100;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.theme-button.dark-mode {
+  color: var(--text-dark);
+}
+
+.theme-button.light-mode {
+  color: var(--text);
+}*/
+
+body.dark-mode {
+  background: var(--background-dark);
+  color: var(--text-dark);
+}
+
+.container.dark-mode {
+  background-color: var(--container-dark);
+  color: var(--text-dark);
+}
+
+button.dark-mode {
+  background-color: var(--button-dark);
+  border: 1px solid var(--button-dark);
+  color: var(--container-dark);
+}
+
+.buttonselect.dark-mode.selected {
+  background-color: var(--button-select-dark);
+  color: var(--black);
+}
+
+.tab.dark-mode button {
+  background-color: var(--button-dark);
+  border: 1px solid var(--tab-button-dark);
+}
+
+.tab.dark-mode button.active {
+  background-color: var(--green);
+}
+
+.minion-buttons.dark-mode button.selected {
+  background-color: var (--button-select-dark);
+  color: var(--black);
+}
+
+.minion-buttons.dark-mode button.active {
+  background-color: var(--green);
+  color: var(--black);
+}
+
+.toggle-button.dark-mode {
+  background-color: var(--button-dark);
+  border: 1px solid var(--button-dark);
+}
+
+h1.dark-mode {
+  text-align: center;
+  color: var(--text-dark);
+}
+
+h2.dark-mode {
+  text-align: center;
+  color: var(--text-dark);
+}
+
+h3.dark-mode {
+  text-align: center;
+  color: var(--text-dark);
+}
+
+label.dark-mode {
+  color: var(--text-dark);
+}
+
+/*.tab button.dark-mode {
+  background-color: var(--text-dark);
+  border: 1px solid var(--button-dark);
+}*/
+
 body {
   margin: 10;
   height: 114vh;
-  background: #191919;
+  background: var(--background);
   background-size: cover;
   font-family: "Montserrat", Arial, sans-serif;
   justify-content: center;
@@ -23,22 +143,37 @@ div {
   max-width: 800px;
   margin: 0 auto;
   backdrop-filter: blur(10px); /* Apply blur effect */
-  background-color: #242424;
+  background-color: var(--container);
   padding: 20px;
   border-radius: 10px;
-  color: #242424;
+  color: var(--container);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  /*display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;*/
 }
 
-h1, h2, h3 {
+h1 {
   text-align: center;
-  color: #f4f4f4;
+  color: var(--text);
+}
+
+h2 {
+  text-align: center;
+  color: var(--text);
+}
+
+h3 {
+  text-align: center;
+  color: var(--text);
 }
 
 label {
   font-weight: bold;
   margin: 10px 0;
   display: inline-block;
-  color: #f4f4f4;
+  color: var(--text);
   font-family: "Montserrat", Arial, sans-serif;
   text-transform: uppercase;
 }
@@ -53,9 +188,9 @@ button {
   width: 80px;
   height: 80px;
   border-radius: 15px;
-  border: 1px solid #29282f;
-  background-color: #29282f;
-  color: #f4f4f4;
+  border: 1px solid var(--button);
+  background-color: var(--button);
+  color: var(--text);
   cursor: pointer;
   text-align: center;
   padding: 0;
@@ -65,19 +200,16 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 .buttonselect.selected {
-  background-color: #8c9c4c;
-  color: black;
-
+  background-color: var(--button-select);
+  color: var(--black);
 }
-
 
 button:hover {
   opacity: 0.8;
 }
-
-
 
 .tab {
   display: flex;
@@ -87,18 +219,20 @@ button:hover {
 .tab button {
   padding: 10px 20px;
   margin-right: 5px;
-  border: 1px solid #ccc;
-  background-color: black;
+  border: 1px solid var(--tab-button);
+  background-color: var(--black);
   cursor: pointer;
   background-size: cover;
   background-position: center;
   border-radius: 15px;
   height: 40px;
   width: 40px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
 .tab button.active {
-  background-color: green;
+  border: 1px solid var(--green);
+  background-color: var(--green);
 }
 
 .minion-buttons {
@@ -107,13 +241,14 @@ button:hover {
 }
 
 .minion-buttons button.selected {
-  background-color: #8c9c4c;
-  color: black;
+  background-color: var(--button-select);
+  color: var(--black);
 }
 
 .minion-buttons button.active {
-  background-color: green;
-  color: black;
+  border: 1px solid var(--green);
+  background-color: var(--green);
+  color: var(--black);
 }
 
 .minion-buttons.active {
@@ -122,65 +257,55 @@ button:hover {
 
 .tab button:hover, .minion-buttons button:hover {
   opacity: 0.8;
-}<style>
-/* Style for the button container */
-.calcbutton {
-  display: flex;
-  justify-content: center; /* Centers the button horizontally */
-  align-items: center; /* Centers the button vertically */
-  height: 100vh; /* Ensures the container fills the entire height of the viewport */
 }
-
-/* Style for the button itself */
 .calcuateButton {
-  background-color: dark-gray; /* Green background */
-  color: white; /* White text color */
-  font-size: 20px; /* Text size */
-  padding: 15px 150px; /* Adds padding inside the button (wider) */
-  border: none; /* Removes default border */
-  border-radius: 8px; /* Rounded corners */
-  cursor: pointer; /* Changes cursor to a pointer on hover */
-  transition: background-color 0.3s; /* Smooth transition for background color */
-  white-space: nowrap; /* Prevents text from wrapping to the next line */
-  max-width: 100%; /* Ensures the button doesn't overflow the parent container */
-  overflow: hidden; /* Prevents the text from overflowing outside the button */
-  text-overflow: ellipsis; /* Adds "..." if the text overflows */
+  background-color: var(--dark-gray); 
+  color: var(--white); 
+  font-size: 20px; 
+  padding: 15px 150px; 
+  border: none; 
+  border-radius: 8px; 
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+  white-space: nowrap; 
+  max-width: 100%; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
   font-family: "Montserrat", Arial, sans-serif;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
-
 
 .calcuateButton:hover {
-  background-color: #45a049; 
+  background-color: var(--light-green); 
 }
-
 
 .calcuateButton:focus {
   outline: none; 
-  box-shadow: 0 0 5px 2px rgba(0, 123, 255, 0.5);    }
-.result {
-  font-size: 30px;
-  color: white;
+  box-shadow: 0 0 5px 2px var(--shadow-blue);    
 }
 
-
+.result {
+  font-size: 30px;
+  color: var(--white);
+}
 
 .toggle-button {
   width: 80px;
   height: 80px;
   border-radius: 15px;
-  border: 1px solid #29282f;
-  background-color: #29282f;
+  border: 1px solid var(--button);
+  background-color: var(--button);
   background-size: cover;
   background-position: center;
   cursor: pointer;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 .toggle-button[data-value="no"] {
   opacity: 0.5;
 }
 
 .toggle-button[data-value="yes"].selected {
-  background-color: #8c9c4c;
-
+  background-color: var(--button-select);
 }
 
 .button-group {
