Update and rename home.css.txt to home.css

--- a/home.css
+++ b/home.css
@@ -1,4 +1,8 @@
-/* General styles */
+
+
+/* This code is given and licensed by the Craftersmc project center and the craftersmc guides project, this code was made by PGnetwork, and adjusted by tgjassi and techonthedev. Copyright TGJASSIYT, PGNetwork, techonthedev 
+
+given to create a fluid calculator home page*/
 * {
     margin: 0;
     padding: 0;
