--- a/calculators/minionProduction/style.css
+++ b/calculators/minionProduction/style.css
@@ -227,6 +227,7 @@ button:hover {
   height: 40px;
   width: 40px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  image-rendering: pixelated;
 }
 
 .tab button.active {
@@ -366,7 +367,7 @@ button:hover {
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 8px;
     background: var(--button);
