--- a/home.css
+++ b/home.css
@@ -62,6 +62,11 @@ header {
     object-fit: cover;
 }
 
+.card h2 {
+    margin: 1rem 0 0.5rem;
+    font-size: 1.2rem;
+    color: var(--text-color);
+}
 .card h3 {
     margin: 1rem 0 0.5rem;
     font-size: 1.2rem;
